last changes on variables

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <div class="navigation-list">
                     <ul>
                         <li><a href="#/landing">Home</a></li>
-                        <li><a href="#/wedding">Wedding</a></li>
+                        <li style="display:{weddingpageCss};"><a href="#/wedding">Wedding</a></li>
                         <li><a href="#/destination">Resort</a></li>
                         <li><a href="#/contact">Contact</a></li>
                         <li><a href="#/faq">Faq</a></li>
@@ -51,7 +51,7 @@
                         <div class="drop-menu">
                             <ul class="drop-ul">
                                 <li><a href="#/landing" class="drop-link">Home</a></li>
-                                <li><a href="#/wedding" class="drop-link">Wedding</a></li>
+                                <li style="display:{weddingpageCss};"><a href="#/wedding" class="drop-link">Wedding</a></li>
                                 <li><a href="#/destination" class="drop-link">Resort</a></li>
                                 <li><a href="#/contact" class="drop-link">Contact</a></li>
                                 <li><a href="#/faq" class="drop-link">Faq</a></li>
@@ -70,7 +70,7 @@
                 <div class="navigation-list">
                     <ul>
                         <li><a href="#/landing">Home</a></li>
-                        <li><a href="#/wedding">Wedding</a></li>
+                        <li style="display:{weddingpageCss};"><a href="#/wedding">Wedding</a></li>
                         <li><a href="#/destination">Resort</a></li>
                         <li><a href="#/contact">Contact</a></li>
                         <li><a href="#/faq">Faq</a></li>
@@ -83,7 +83,7 @@
                         <div class="drop-menu">
                             <ul class="drop-ul">
                                 <li><a href="#/landing" class="drop-link">Home</a></li>
-                                <li><a href="#/wedding" class="drop-link">Wedding</a></li>
+                                <li style="display:{weddingpageCss};"><a href="#/wedding" class="drop-link">Wedding</a></li>
                                 <li><a href="#/destination" class="drop-link">Resort</a></li>
                                 <li><a href="#/contact" class="drop-link">Contact</a></li>
                                 <li><a href="#/faq" class="drop-link">Faq</a></li>
@@ -107,7 +107,7 @@
         			</div>
         			
         			<div class="col-sm-4">
-        				 <p><span class="gold">$150 off</span> for your next group vacation. Discount code #45454545. </br> Please reach out to us <a href="http://travelzap.com/group-vacation-quote" target="_blank">here.</a></p>
+        				 <p><span class="gold">$150 off</span> for your next group vacation. Discount code #{discount_code}. </br> Please reach out to us <a href="http://travelzap.com/group-vacation-quote" target="_blank">here.</a></p>
         			</div>
         
         			<div class="col-sm-3 col-sm-offset-1 social-list ">
