changes with alex idea

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<!--ICONS-->
 	<link rel="stylesheet" type="text/css" href="//code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
 	
-	<title>{b_initial} &amp; {g_initial} {wedding_title}</title>
+	<title>{b_initial} &amp; {g_initial} Wedding</title>
 	
 	<!--BOOTSTRAP CORE CSS-->
 	<link rel="stylesheet" 
