--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 </head>
 
 <body>
+	<div id="loading"></div>
 	<!-- HEADER ====================================== -->
 	<header>
         <navbar class="navigation container">
