--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 	<!-- FIXED FOOTER FOR SMALL VIEW ====================================== -->
 	<section id="fixed-footer-sm">
 		<!-- agent info footer ====================================== -->
-		<div class="text-right"><span class="price-match-sm" data-toggle="collapse" data-target="#price-match-content-sm" aria-expanded="false" aria-controls="collapseExample">PRICE MATCH <br/><span class="learn-more">Learn more</span></span></div>
+		<a data-toggle="collapse" data-target="#price-match-content-sm" aria-expanded="false" aria-controls="collapseExample"><div class="text-right"><span class="price-match-sm">PRICE MATCH <br/><span class="learn-more">Learn more</span></span></div></a>
 	     <!-- price-guarantee footer ====================================== -->
 	         <div class="collapse text-left" id="price-match-content-sm">
 				  <div>
